@@ -5,6 +5,9 @@ Changelog
 1.0.2dev
 --------
 
+* Added some Plone 3 compatibility fixes
+  [lgraf]
+
 * Added test dependency on pyquery
   [lgraf]
 
